--- a/try.html
+++ b/try.html
@@ -1,102 +1,67 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>Login Form</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Responsive Cards</title>
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background: color #000370;
-            font-family: 'Luminari';
-        }
-
-        .login {
-            width: 382px;
-            overflow: hidden;
-            margin: auto;
-            margin: 20 0 0 450px;
-            padding: 80px;
-            background: #121313;
-            border-radius: 15px;
-
-        }
-
-        h2 {
-            text-align: center;
-            color: #277582;
+        /* Style for the container of cards */
+        .card-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
             padding: 20px;
         }
 
-        label {
-            color: #08ffd1;
-            font-size: 17px;
-        }
-
-        #Uname {
+        /* Style for individual cards */
+        .card {
             width: 300px;
-            height: 30px;
-            border: none;
-            border-radius: 3px;
-            padding-left: 8px;
+            /* Adjust width as needed */
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            background-color: #f9f9f9;
         }
 
-        #Pass {
-            width: 300px;
-            height: 30px;
-            border: none;
-            border-radius: 3px;
-            padding-left: 8px;
-
+        /* Media query for responsiveness */
+        @media screen and (max-width: 768px) {
+            .card {
+                width: calc(50% - 20px);
+                /* Adjust width for smaller screens */
+            }
         }
 
-        #log {
-            width: 300px;
-            height: 30px;
-            border: none;
-            border-radius: 17px;
-            padding-left: 7px;
-            color: black;
-
-
-        }
-
-        span {
-            color: white;
-            font-size: 17px;
-        }
-
-        a {
-            float: right;
-            background-color: grey;
+        @media screen and (max-width: 576px) {
+            .card {
+                width: calc(100% - 20px);
+                /* Adjust width for even smaller screens */
+            }
         }
     </style>
 </head>
 
 <body>
-    <h2>Login Page</h2><br>
-    <div class="login">
-        <form id="login" method="get" action="login.php">
-            <label><b>User Name
-                </b>
-            </label>
-            <input type="text" name="Uname" id="Uname" placeholder="Username">
-            <br><br>
-            <label><b>Password
-                </b>
-            </label>
-            <input type="Password" name="Pass" id="Pass" placeholder="Password">
-            <br><br>
-            <input type="button" name="log" id="log" value="Log In Here">
-            <br><br>
-            <input type="checkbox" id="check">
-            <span>Remember me</span>
-            <br><br>
-            <a href="#">Forgot Password</a>
-        </form>
-    </div>
+    <div class="card-container">
+        <!-- Card 1 -->
+        <div class="card">
+            <h2>Card 1</h2>
+            <p>This is the content of Card 1.</p>
+        </div>
 
+        <!-- Card 2 -->
+        <div class="card">
+            <h2>Card 2</h2>
+            <p>This is the content of Card 2.</p>
+        </div>
+
+        <!-- Card 3 -->
+        <div class="card">
+            <h2>Card 3</h2>
+            <p>This is the content of Card 3.</p>
+        </div>
+    </div>
 </body>
 
 </html>
